first commit:first version

--- a/Frontend/src/app/studentslogin/studentslogin.component.css
+++ b/Frontend/src/app/studentslogin/studentslogin.component.css
@@ -1,6 +1,14 @@
+img{
+    margin:10px;
+
+    float: center;
+}
+
+
 .card-body {
     font-size: medium;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+    
 
 }
 
