--- a/Frontend/src/app/professorlogin/professorlogin.component.html
+++ b/Frontend/src/app/professorlogin/professorlogin.component.html
@@ -1,4 +1,5 @@
 <div class="colorshadow">
+  <img src="../../assets/images/courses6.jpg">
 <div class="py-5">
     <div class="row">
       <div class="col-md-6 mx-auto">
